--- a/repo.yml
+++ b/repo.yml
@@ -1,2 +1,23 @@
-- name: Git Tag Generator
-  uses: ChloePlanet/github-tag-action@2.0.0
+name: Generate tag
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    name: Generate tag
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@main
+        with:
+          fetch-depth: '0'
+
+      - name: Bump version and push tag
+        uses: ChloePlanet/github-tag-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+
