--- a/repo.yml
+++ b/repo.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@main
+        uses: actions/merge@main
         with:
           fetch-depth: '0'
 
